zebra-rpc/src/methods/tests/snapshots/z_get_treestate_no_treestate@custom_testnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: treestate
---
{
  "hash": "025579869bcf52a989337342f5f57a84f3a28b968f7d6a8307902b065a668d23",
  "height": 1,
  "time": 1477674473,
  "sapling": {
    "commitments": {}
  },
  "orchard": {
    "commitments": {}
  },
  "ironwood": {
    "commitments": {}
  }
}
